[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phyex1d"
dynamic = ["version"]
dependencies = [
  "pppy",
  "ctypesForFortran",
  "numpy",
  "scipy",
  "netCDF4",
  "f90nml",
]
authors = [
  { name = "Sébastien Riette", email = "sebastien.riette@meteo.fr" },
]
description = "1D model using PHYEX"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "CECILL-C"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
'phyex1d' = "phyex1d.cli:main"

[tool.setuptools.dynamic]
version = {attr = "phyex1d.__version__"}
